# copilot-desktop

./: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
docs/: implementation-plan.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  copilot.rs  lib.rs  main.rs  mcp_host.rs  storage.rs
src/components/agents/: AgentBuilderDrawer.tsx  AgentChip.tsx  AgentList.tsx  SkillChip.tsx
src/components/auth/: SignInScreen.tsx
src/components/conversation/: ChatInput.tsx  ConversationItem.tsx  ConversationList.tsx  MessageBubble.tsx  MessageList.tsx  ToolActivityCard.tsx
src/components/layout/: AppShell.tsx  ChatPanel.tsx  ContextPanel.tsx  Sidebar.tsx
src/components/mcp/: McpServerDrawer.tsx
src/components/model/: ModelPicker.tsx
src/components/skills/: SkillBuilderDrawer.tsx  SkillChip.tsx  SkillList.tsx
src/hooks/: useChat.ts
src/lib/: builtinAgents.ts  builtinSkills.ts  curatedMcpServers.ts  githubModelsClient.ts  pkce.ts  storage.ts  toolLabels.ts  tools.ts
src/pages/: AuthPage.tsx  ChatPage.tsx
src/store/: useAgentStore.ts  useAuthStore.ts  useConversationStore.ts  useMcpStore.ts  useModelStore.ts  useSkillStore.ts
src/styles/: globals.css
src/types/: agent.ts  conversation.ts  mcp.ts  settings.ts  skill.ts
