[package]
name = "copilot-desktop"
version = "0.1.0"
description = "GitHub Copilot as a desktop app"
authors = []
edition = "2021"

[lib]
name = "copilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
keyring = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
